# cours_c

./: CMakeLists.txt  README.md
TP1/: tp1Exo1.c  tp1Exo8  tp1Exo8.c
TP2/Exo1/: a.out  aa.h  b.h  bb.h  macro.c  main.c  myprgm2
TP2/Exo2/: a.c  a.h  main.c
TP2/Exo3/: main.c
TP2/Exo4/: main.c
TP3/: a.out  exo1.c  exo2.c  exo3.c  exo4.c
TP4/: a.out  exo1.c  exo1.h  exo2.c  exo2.h  exo2.h.gch  exo3.c  exo4.c  exo5.c  exo6.c  test.cpp
TP5/: a.out  main.cpp  pile.cpp
TP6/: BinaryExpression.cpp  BinaryExpression.h  DivisionExpression.cpp  DivisionExpression.h  Expression.h  MultiplicationExpression.cpp  MultiplicationExpression.h  MultiplicationNExpression.cpp  MultiplicationNExpression.h  a.out  constantExpression.cpp  constantExpression.h  main.cpp  main2.cpp  modify.cpp
TP7/: a.out  main.cpp
